# luminaire-explorer

./: README.md  package-lock.json  package.json  tailwind.config.js
ai/: ai_worker.py  requirements.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  db.rs  lib.rs  scanner.rs
src/components/: Player.tsx
