[package]
name = "luminaire"
version = "0.1.0"
description = "Luminaire Media Explorer"
authors = ["Sanjula Jayasinghe"]
edition = "2021"

[lib]
name = "luminaire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
exif = "0.6"
image = "0.25"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

